--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es2016", //配置编译目标代码的版本标准
         "module":"commonjs",//配置编译目标使用的模块化标准
         "lib": ["es2016"],//这个是配置ts文件运行的环境
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "strictNullChecks": true,//严格的空类型检查
     },
     "include": ["./src"],//配置编译路径
     // "files": ["./src/index.ts"],//这个是配置编译的指定文件，以及其引入的ts
