--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "requires": true,
     "lockfileVersion": 1,
     "scripts": {
-        "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts"
+        "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts",
+        "build" : "rd /s /q dist & tsc"
     },
     "dependencies": {
         "@types/node": {
